--- a/src/app/user-portal/edit-blog/edit-blog.component.html
+++ b/src/app/user-portal/edit-blog/edit-blog.component.html
@@ -3,7 +3,7 @@
     <h3 class="modal-title mx-auto text-info"><strong>{{ titleBlog }}</strong></h3>
   </div>
   <div class="modal-body">
-    <form [formGroup]="blogForm" class="form" (ngSubmit)="addBlog()" appSubmitForm>
+    <form [formGroup]="editForm" class="form" (ngSubmit)="editBlog()" appSubmitForm>
       <div class="c-row">
         <div class="input col-25">
           <label  for="title">Blog Title:</label>
@@ -61,8 +61,9 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="submit" class="btn btn-primary mr-4" (click)="addBlog()">Save</button>
+    <button type="submit" class="btn btn-warning mr-4" (click)="editBlog()">Edit</button>
     <button type="button" class="btn btn-secondary mr-2" (click)="activeModal.close('Close click')">Close</button>
   </div>
 
-  {{ blogForm.value | json}}
+  {{ editForm.value | json}}
+
