--- a/src/app/user-portal/edit-blog/edit-blog.component.scss
+++ b/src/app/user-portal/edit-blog/edit-blog.component.scss
@@ -15,13 +15,17 @@
   border-radius: 5px;
   padding:5px 15px;
   box-shadow: 1px 1px 5px #6c6cf5;
-}/*
+}
 .checkbox {
   text-align: left;
   size: 10px;
   padding-top: 2%;
   padding-left: 7%;
   width:10%;
+}
+/*ng-untouched.ng-pristine.ng-valid {
+  width: fit-content;
+  margin-top: 3px;
 }*/
 input#visible {
   width: fit-content;
