--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,10 @@ label {
     padding-right: 10px; 
     white-space: nowrap;
   }
+  div.modal-content {
+    width: 90%;
+    margin-left: 6px;
+  }
 /*
 //td:nth-of-type(1):before {content :"Task name:";}
 //td:nth-of-type(2):before {content :"Total Hour:";}
