--- a/src/app/user-portal/table/table.component.html
+++ b/src/app/user-portal/table/table.component.html
@@ -1,13 +1,5 @@
-
-  <div class="blog">
-    <h1>Your Blogs :</h1>
-    <button (click)="open()" type="button">Add Blogs</button>
-  </div>
-  <app-table [blogs]="currUserBlog" (passBlogIdForLike)="increaseLikes($event)" (passBlogIdForDel)="deleteBlog($event)" (passBlogRow)="openEditModal($event)">
-    
-  </app-table>
-  <!-- 
-  <ng-template #content let-modal>
+<p>table works!</p>
+<ng-template #content let-modal>
     <div class="modal-header">
       <h2 class="modal-title mx-auto text-danger">Warning !</h2>
     </div>
@@ -15,12 +7,12 @@
       <p><strong>Do you want to delete the blog ?</strong></p>
     </div>
     <div class="modal-footer">
-      <button type="button" ngbAutofocus class="btn btn-danger mr-4" (click)="modal.close('Close click'); deleteBlog()">Yes</button>
+      <button type="button" ngbAutofocus class="btn btn-danger mr-4" (click)="modal.close('Close click'); delBlog()">Yes</button>
       <button type="button" class="btn btn-primary mr-4" (click)="modal.close('Close click')">NO</button>
     </div>
   </ng-template>
- -->
-  <!-- <ng-template #tipContent >
+
+<ng-template #tipContent >
     <ul *ngFor="let like of blogLikes">
       <li *ngIf="blogLikes.length > 0">{{ like.user.firstName }}</li>
   </ul>
@@ -43,7 +35,7 @@
   </ng-template>
 
 <div class="blog-table">
-  <table cdk-table [dataSource]="tableDataSource$" multiTemplateDataRows matSort >
+  <table cdk-table [dataSource]="tableDataSource$" multiTemplateDataRows matSort (matSortChange)="sortData($event)" >
     
     <ng-container cdkColumnDef="user">
       <cdk-header-cell  *cdkHeaderCellDef mat-sort-header> FirstName</cdk-header-cell>
@@ -68,7 +60,7 @@
     <ng-container cdkColumnDef="likeAndComment">
       <cdk-header-cell *cdkHeaderCellDef mat-sort-header> Likes </cdk-header-cell>      
       <cdk-cell *cdkCellDef="let row; let i=dataIndex">
-        <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
+        <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)="addRemoveLike(row.id)">
           <span id="like" class="far fa-thumbs-up">
             {{ row.likeItems.length }}
           </span>
@@ -92,7 +84,7 @@
         <div ngbDropdown class="d-inline-block">
           <button class="btn" id="dropdownBasic1" ngbDropdownToggle><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <button (click)="getBlogId(row.id, content)"  class="btn btn-danger m-1" data-toggle="modal" data-target="#exampleModalCenter" type="button">Delete</button><br>
+            <button (click)="getBlogId(row.id, content)"  class="btn btn-danger m-1" data-toggle="modal" data-target="#content" type="button">Delete</button><br>
             <button (click)="openEditModal(row)" type="button" class="btn btn-primary m-1">edit blog</button>
           </div>
         </div>
@@ -113,7 +105,7 @@
                 <li><b>Description:</b> {{ row.description }} </li><hr>
                 <li><b>Content:</b> {{ row.content }} </li><hr>
                 <li>  
-                  <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
+                  <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)="addRemoveLike(row.id)">
                     <span id="like" class="far fa-thumbs-up">
                       {{ row.likeItems.length }}
                     </span>
@@ -132,4 +124,4 @@
     <cdk-row *cdkRowDef="let row; columns: displayedColumns;"></cdk-row>
     <cdk-row class="row-2" *cdkRowDef="let row; columns: displayedColumnsRow2;"></cdk-row>
   </table>
-</div> -->
+</div>
