--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,3 +127,6 @@ input:focus {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
