--- a/src/app/user-portal/users-blog/users-blog.component.html
+++ b/src/app/user-portal/users-blog/users-blog.component.html
@@ -3,107 +3,5 @@
     <h2>All Users Blogs </h2>
   </div>
 
-  <ng-template #tipContent >
-    <ul *ngFor="let like of (blogLikes | sortUser)">
-      <li *ngIf="blogLikes.length > 0">{{ like.user.firstName }}</li>
-  </ul>
-  <ul *ngIf="blogLikes.length == 0">
-    <li>no likes</li>
-  </ul>
-  </ng-template>
-  <ng-template #popContent>
-    <ul *ngFor="let comment of blogComments">
-      <li *ngIf="blogComments.length > 0">{{ comment.user.firstName }}</li>
-  </ul>
-  <ul *ngIf="blogComments.length == 0">
-    <li>no comments</li>
-  </ul>
-  </ng-template>
-
-  <ng-template #popTitle>
-    Comment given by users: 
-  </ng-template>
-
-<div class="blog-table"> 
-  <table cdk-table [dataSource]="tableDataSource$" multiTemplateDataRows>
-    
-    <ng-container cdkColumnDef="user">
-      <cdk-header-cell *cdkHeaderCellDef> User </cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.user.firstName }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="title">
-      <cdk-header-cell *cdkHeaderCellDef> Title </cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.title }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="description">
-      <cdk-header-cell *cdkHeaderCellDef> Description </cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.description }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="content">
-      <cdk-header-cell *cdkHeaderCellDef> Content </cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.content }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="likeAndComment">
-      <cdk-header-cell *cdkHeaderCellDef>Like and Comment</cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row; let i=dataIndex">
-        <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
-          <span id="like" class="far fa-thumbs-up">
-            {{ row.likeItems.length }}
-          </span>
-        </button>
-        <button type="button" class="btn btn-primary ml-3 btn-sm" [ngbPopover]="popContent" [popoverTitle]="popTitle" (click)="getComments(i)">
-          <span class="cmt-s">
-            Comments {{ row.commentItems.length }}
-          </span> 
-        </button>
-      </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="createdAt">
-      <cdk-header-cell *cdkHeaderCellDef> CreatedAt </cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.createdAt | date: 'MMM dd YYYY' }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="image">
-      <cdk-header-cell *cdkHeaderCellDef> Image </cdk-header-cell>
-      <cdk-cell *cdkCellDef><img src="./assets/images/nature.jpeg"></cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="titleRow2">
-      <cdk-header-cell *cdkHeaderCellDef></cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row; let i=dataIndex"> 
-        <hr id="title-line">{{ row.title }}
-        <button type="button" class="btn collapse-button" (click)="collapse.toggle()" [attr.aria-expanded]="!controlRow[i].isCollapsed" aria-controls="collapseExample">
-          <i class="fa fa-angle-down"></i> 
-        </button>
-        <div #collapse="ngbCollapse" [(ngbCollapse)]="controlRow[i].isCollapsed">
-          <div class="card">
-            <div class="card-body">
-              <ul>
-                <li><b>Description:</b> {{ row.description }} </li><hr>
-                <li><b>Content:</b> {{ row.content }} </li><hr>
-                <li>  
-                  <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
-                    <span id="like" class="far fa-thumbs-up">
-                      {{ row.likeItems.length }}
-                    </span>
-                  </button><hr>
-                </li><hr>
-                <li><img src="./assets/images/nature.jpeg"></li><hr>
-                <li> {{ row.createdAt | date: 'MM dd YYYY' }} </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </cdk-cell>
-    </ng-container>
-
-    <cdk-header-row *cdkHeaderRowDef="displayedColumns"></cdk-header-row>
-    <cdk-row *cdkRowDef="let row; columns: displayedColumns;"></cdk-row>
-    <cdk-row class="row-2" *cdkRowDef="let row; columns: displayedColumnsRow2;"></cdk-row>
-  </table>
-</div>
+  <app-table [blogs]="allUsersBlog" (updateLikeEmitter)="updateLikes($event)"> 
+  </app-table>
