--- a/src/app/user-portal/home/home.component.html
+++ b/src/app/user-portal/home/home.component.html
@@ -3,133 +3,6 @@
     <h1>Your Blogs :</h1>
     <button (click)="open()" type="button">Add Blogs</button>
   </div>
-  <app-table [blogs]="currUserBlog" (passBlogIdForLike)="increaseLikes($event)" (passBlogIdForDel)="deleteBlog($event)" (passBlogRow)="openEditModal($event)">
-    
+  <app-table [blogs]="currUserBlog" (updateLikeEmitter)="updateLikes($event)" (deleteEmitter)="deleteBlog($event)" (editBlogEmitter)="editBlog($event)"> 
   </app-table>
-  <!-- 
-  <ng-template #content let-modal>
-    <div class="modal-header">
-      <h2 class="modal-title mx-auto text-danger">Warning !</h2>
-    </div>
-    <div class="modal-body ">
-      <p><strong>Do you want to delete the blog ?</strong></p>
-    </div>
-    <div class="modal-footer">
-      <button type="button" ngbAutofocus class="btn btn-danger mr-4" (click)="modal.close('Close click'); deleteBlog()">Yes</button>
-      <button type="button" class="btn btn-primary mr-4" (click)="modal.close('Close click')">NO</button>
-    </div>
-  </ng-template>
- -->
-  <!-- <ng-template #tipContent >
-    <ul *ngFor="let like of blogLikes">
-      <li *ngIf="blogLikes.length > 0">{{ like.user.firstName }}</li>
-  </ul>
-  <ul *ngIf="blogLikes.length == 0">
-    <li>no likes</li>
-  </ul>
-  </ng-template>
   
-  <ng-template #popContent>
-    <ul *ngFor="let comment of blogComments">
-      <li *ngIf="blogComments.length > 0">{{ comment.user.firstName }}</li>
-  </ul>
-  <ul *ngIf="blogComments.length == 0">
-    <li>no comments</li>
-  </ul>
-  </ng-template>
-
-  <ng-template #popTitle>
-    Comment given by users: 
-  </ng-template>
-
-<div class="blog-table">
-  <table cdk-table [dataSource]="tableDataSource$" multiTemplateDataRows matSort >
-    
-    <ng-container cdkColumnDef="user">
-      <cdk-header-cell  *cdkHeaderCellDef mat-sort-header> FirstName</cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ currUser }} </cdk-cell>
-    </ng-container>
-    
-    <ng-container cdkColumnDef="title">
-      <cdk-header-cell  *cdkHeaderCellDef mat-sort-header> Title</cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.title }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="description">
-      <cdk-header-cell *cdkHeaderCellDef mat-sort-header>Description</cdk-header-cell>      
-      <cdk-cell *cdkCellDef="let row"> {{ row.description }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="content">
-      <cdk-header-cell *cdkHeaderCellDef mat-sort-header>Content</cdk-header-cell>      
-      <cdk-cell *cdkCellDef="let row"> {{ row.content }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="likeAndComment">
-      <cdk-header-cell *cdkHeaderCellDef mat-sort-header> Likes </cdk-header-cell>      
-      <cdk-cell *cdkCellDef="let row; let i=dataIndex">
-        <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
-          <span id="like" class="far fa-thumbs-up">
-            {{ row.likeItems.length }}
-          </span>
-        </button>
-      </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="createdAt">
-      <cdk-header-cell *cdkHeaderCellDef mat-sort-header>CreatedAt</cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row"> {{ row.createdAt | date: 'MMM dd YYYY' }} </cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="image">
-      <cdk-header-cell *cdkHeaderCellDef> Image </cdk-header-cell>
-      <cdk-cell *cdkCellDef><img src="./assets/images/nature.jpeg"></cdk-cell>
-    </ng-container>
-
-    <ng-container cdkColumnDef="delete">
-      <cdk-header-cell *cdkHeaderCellDef> </cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row">
-        <div ngbDropdown class="d-inline-block">
-          <button class="btn" id="dropdownBasic1" ngbDropdownToggle><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
-          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <button (click)="getBlogId(row.id, content)"  class="btn btn-danger m-1" data-toggle="modal" data-target="#exampleModalCenter" type="button">Delete</button><br>
-            <button (click)="openEditModal(row)" type="button" class="btn btn-primary m-1">edit blog</button>
-          </div>
-        </div>
-      </cdk-cell>
-    </ng-container>
-    
-    <ng-container cdkColumnDef="titleRow2">
-      <cdk-header-cell *cdkHeaderCellDef></cdk-header-cell>
-      <cdk-cell *cdkCellDef="let row; let i=dataIndex"> 
-        <hr id="title-line">{{ row.title }}
-        <button type="button" class="btn collapse-button" (click)="collapse.toggle()" [attr.aria-expanded]="!controlRow[i].isCollapsed" aria-controls="collapseExample">
-          <i class="fa fa-angle-down"></i> 
-        </button>
-        <div #collapse="ngbCollapse" [(ngbCollapse)]="controlRow[i].isCollapsed">
-          <div class="card">
-            <div class="card-body">
-              <ul>
-                <li><b>Description:</b> {{ row.description }} </li><hr>
-                <li><b>Content:</b> {{ row.content }} </li><hr>
-                <li>  
-                  <button type="button" class="btn btn-primary btn-sm pr-1 pl-1" placement="bottom" [ngbTooltip]="tipContent" (mouseover)="getLikes(i)" (click)=increaseLikes(row.id)>
-                    <span id="like" class="far fa-thumbs-up">
-                      {{ row.likeItems.length }}
-                    </span>
-                  </button><hr>
-                </li><hr>
-                <li><img src="./assets/images/nature.jpeg"></li><hr>
-                <li> {{ row.createdAt | date: 'MM dd YYYY' }} </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </cdk-cell>
-    </ng-container>
-
-    <cdk-header-row *cdkHeaderRowDef="displayedColumns"></cdk-header-row>
-    <cdk-row *cdkRowDef="let row; columns: displayedColumns;"></cdk-row>
-    <cdk-row class="row-2" *cdkRowDef="let row; columns: displayedColumnsRow2;"></cdk-row>
-  </table>
-</div> -->
