--- a/src/app/user-portal/my-profile/my-profile.component.scss
+++ b/src/app/user-portal/my-profile/my-profile.component.scss
@@ -17,6 +17,7 @@
 .body h6 {
 	margin: 2%;
 	padding: 2%; 
+  font-size: 16px;
 }
 .foot{
 	text-align: right;
@@ -38,7 +39,7 @@
   h2,h3 {
     font-size: 20px;
   }
-  h6 {
+  .body h6 {
     font-size: 12px;  
   }
   button {
