--- a/src/app/user-portal/table/table.component.scss
+++ b/src/app/user-portal/table/table.component.scss
@@ -56,15 +56,19 @@ cdk-row:hover {
 .cdk-column-user{
   font-weight: 700;
   text-decoration: underline;
+  /*width: 90px;*/
 }
 .cdk-column-title {
   font-weight: 700;
   font-family: sans-serif;
   word-break: break-word;
+  /*width: 90px;*/
+  text-align: center;
 }
 .cdk-column-description {
   font-family: sans-serif;
   word-break: break-word;
+  /*width: 120px;*/
 }
 .cdk-column-content {
   color: #413f3f;
@@ -72,6 +76,7 @@ cdk-row:hover {
   text-shadow: 2px 2px 6px gray;
   /*text-align: justify;*/
   word-break: break-all;
+  /*width: 180px;*/
 }
 #like {
   border-radius:2px ;
@@ -84,6 +89,7 @@ img {
 }
 .cdk-column-likeAndComment {
   white-space: nowrap;
+  /*width: 70px;*/
 }
 .btn {
   border: none; 
@@ -106,6 +112,14 @@ ul {
     list-style-type: none;
     padding: 10px; 
   }
+.mat-sort-header {
+  ::ng-deep {
+    .mat-sort-header-content {
+      margin: auto;
+    }
+  };
+}
+
 @media only screen and (max-width:600px) {
   
   .blog-table {
